--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -46,28 +46,28 @@ epidemic_summary_outputs <- readRDS("../inst/blueprint_output_3_Sep9/Report_3_Ep
 
 # Overview {.unnumbered}
 
-In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that the installation of far UVC could have on the transmission and burden of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that the installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this final report, we present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens.
+In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that far UVC installation could have on the transmission of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that the installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this final report, we present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of both epidemic and endemic respiratory pathogens.
 
 # Summary of Key Results {#changes}
 
--   Far UVC deployment to cover a random 10% of total location area led to average reductions in annual infection incidence of X% for an endemic "Influenza-like" pathogen, and Y% for an endemic "SARS-CoV-2-like" pathogen. Targeting far UVC to the riskiest locations increased this impact by Ax and Bx respectively.
+-   Far UVC deployment to cover a random 10% of total location area led to average reductions in annual infection incidence of \~9% for an endemic "Influenza-like" pathogen, and \~4% for an endemic "SARS-CoV-2-like" pathogen. Targeting far UVC to the riskiest locations increased this impact by 1.8x and 1.5x respectively.
 
--   In general, targeting far UVC deployment to locations based on riskiness had the highest relative impact when coverage of space was low. Increasing far UVC coverage led to increasing overlap of the spaces covered between random and targeted strategies, and a diminished difference between the two strategies in terms of impact.
+-   In general, targeting far UVC deployment to locations based on riskiness had the highest relative impact when overall coverage of space was low. Increasing far UVC coverage led to increasing overlap of the spaces covered between random and targeted strategies, and a diminished difference between the two strategies in terms of impact.
 
--   Far UVC deployment had a relatively higher impact on transmission of the "Influenza-like" pathogen than on the "SARS-CoV-2-like" pathogen (though impact in the latter was not negligible). This arises from the differences in their respective $R_0$ values (\~1.35 and \~2.5 respectively), and the non-linear nature by which reductions in transmission affect epidemic dynamics at different starting $R_0$ values.
+-   Far UVC deployment had a relatively higher impact on transmission for the "Influenza-like" pathogen than for the "SARS-CoV-2-like" pathogen (though impact in the latter was not negligible). This arises from the differences in their respective $R_0$ values (\~1.35 and \~2.5 respectively), and the non-linear nature by which reductions in transmission affect epidemic dynamics when starting from different $R_0$ values.
 
--   Far UVC deployment to cover a random 10% of total location area led to average reductions in epidemic final size of X% for an epidemic "Influenza-like" pathogen, and Y% for an epidemic "SARS-CoV-2-like" pathogen.
+-   Far UVC deployment to cover a random 10% of total location area led to modest reductions in epidemic final size of \~7% for an epidemic "Influenza-like" pathogen, and \~1% for an epidemic "SARS-CoV-2-like" pathogen. More substantial (and benefical) changes were observed however in other epidemic-relevant metrics such as the height and timing of the epidemic peak.
 
 # Model Changes
 
 Two updates to the model have been made since the last report. These are:
 
-1.  Explicitly representing the physical area of the locations we are modelling (rather than just the number of people the location hosts). (Section \@ref(square-footage))
+1.  Explicitly representing the physical area of the locations we are modelling (rather than just the number of people each location hosts). (Section \@ref(square-footage))
 2.  Adding in the option to assign far UVC to the riskiest locations (rather than assigning it to locations at random, independently of riskiness). (Section \@ref(riskiness-targeting))
 
-## Explicitly representing the square meterage of each location {#square-footage}
+## Explicitly representing the physical size of each location {#square-footage}
 
-Previously, the modelling framework used the number of individuals occupying the location as a proxy for the size of the location. This approach makes the implicit and unrealistic assumption that all Setting Types (i.e. schools, workplaces, leisure settings and households) have the same occupant density.
+Previously, the modelling framework used the number of individuals occupying the location as a proxy for the physical size of the location. This approach makes the implicit and unrealistic assumption that all Setting Types (i.e. schools, workplaces, leisure settings and households) have the same occupant density.
 
 In response to this, we have updated the modelling framework to include occupant densities specific to each Setting Type, with these occupant densities selected to match those used for the calculation of transmission riskiness variation described in the [previous](https://mrc-ide.github.io/helios/articles/blueprint-july.html) report, which were:
 
@@ -79,11 +79,11 @@ In response to this, we have updated the modelling framework to include occupant
 
 -   **Leisure:** 2m^2^ per person(50 people per 100m^2^)
 
-Note that an assumption remaining here is that all Locations of a particular Setting Type (e.g. Schools) have the same assumed occupancy density. The density of occupants in Locations belonging to each Setting Type is therefore the same, but the overall area for each Location differs depending on the number of individuals who occupy that particular Location.
+Note that an assumption remaining here is that all Locations of a particular Setting Type (e.g. Schools) have the same assumed occupancy density. The density of occupants in Locations belonging to each Setting Type is therefore the same, but the overall area of each Location differs depending on the number of individuals who occupy that particular Location.
 
 ## Targeting far UVC to locations based on riskiness {#riskiness-targeting}
 
-In a [previous report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we incorporated variation in riskiness between Locations belonging to the same Setting Type. This variation was estimated using empirical data on variation in ventilation rates and integrating this with a transient Wells-Riley equation. Previously assigning far UVC to individual locations was either done randomly or targeted to the largest settings (by number of people they contain). In this update to the model, we have enabled targeting of far UVC to locations based on their riskiness.
+In a [previous report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we incorporated variation in riskiness between Locations belonging to the same Setting Type. This variation was estimated using empirical data on variation in ventilation rates and integrating this with a transient Wells-Riley equation. Previously, assigning far UVC to individual locations was either done randomly or targeted to the largest settings (by number of people they contain). In this update to the model, we have enabled targeting of far UVC to locations based on their riskiness.
 
 As a reminder, here is what the distribution of riskiness across locations of the same Setting-Type looks like in our modelling framework Together, these imply an approximate "riskiness ratio" (the difference in riskiness between the 5th percentile risky and 95th percentile risky) of 2.5x for Households, 5.5x for Leisure locations, 4.75x for Schools and 6.35x for Workplaces:
 
@@ -143,10 +143,9 @@ ggplot(riskiness, aes(riskiness)) +
 
 ```
 
-The modelling framework is now able to target the deployment of far UVC in Locations based on their riskiness. Below we show how assignment of far UVC works for the two targeting strategies for an example where far UVC is installed to cover 50% of total School, Workplace and Leisure location area. The two strategies are "random" (far UVC assigned randomly to locations, irrespective of their riskiness) and "targeted riskiness" (far UVC assigned to locations based on the rank ordered riskiness of each setting).
+We have updated the modelling framework to enable targeting the deployment of far UVC to Locations based on a ranked ordering of their riskiness. Below we show how assignment of far UVC works for the two targeting strategies considered in this report. The two strategies are "random" (far UVC assigned randomly to locations, irrespective of their riskiness) and "targeted riskiness" (far UVC assigned to locations based on the rank ordered riskiness of each setting). The results below show an example where far UVC is installed to cover 50% of total School, Workplace and Leisure location area.
 
 (ref:riskiness-coverage-exemplar) An illustrative comparison of the random targeting and riskiness-specific targeting methods for selecting locations in which far UVC is to be deployed. The grey bars represent locations in which far UVC has not been installed, and the dark blue bars those in which it has. In the left-hand plot, far UVC is deployed, at random (i.e. irrespective of setting-specific riskiness), to a 50% of all locations, across setting types. In the right-hand plot, far UVC is deployed in the riskiest 50% of locations.
-
 
 ```{r riskiness-coverage-exemplar, fig.cap="(ref:riskiness-coverage-exemplar)", fig.fullwidth = TRUE, fig.height=5}
 
@@ -217,11 +216,11 @@ ggplot(x, aes(x = rank, y = riskiness,
 
 # Assessing the impact of far UVC on the burden of endemic respiratory viruses {#assessing}
 
-Using the updated modelling framework described above, we conducted analyses evaluating the potential impact of far UVC deployment on the transmission and disease burden of a hypothetical respiratory virus. We considered two pathogen archetypes (described in detail below) and present analyses for both an endemic pathogen (i.e. one which is consistently present in a population and maintained at a particular baseline prevalence) and an epidemic one (i.e. one which is previously not present in the population, and which emerges to cause an epidemic).
+Using the updated modelling framework described above, we conducted analyses evaluating the potential impact of far UVC deployment on the transmission and disease burden of a hypothetical respiratory virus. We considered two pathogen archetypes (described in detail below) and present analyses for both an endemic pathogen (i.e. one which is consistently present in a population and which persists at a particular baseline prevalence of "endemicity") and an epidemic one (i.e. a pathogen which is previously not present in the population, and which emerges to cause an epidemic).
 
 ## Methods
 
-Here, we provide a (very) brief summary of the way in which we generated the results presented here. For both endemic and epidemic pathogen archetypes, we run the `helios` model with a range of parameter combinations varying far UVC coverage, far UVC efficacy, how the far UVC is deployed (at random or targeted at the riskiest % of locations), and for two pathogen archetypes:
+Here, we provide a (very) brief summary of the way in which we generated the results presented in the remainder of this report. For both endemic and epidemic pathogen archetypes, we run the `helios` model with a range of parameter combinations varying far UVC coverage, far UVC efficacy, how the far UVC is deployed (at random or targeted at the riskiest locations), and for two pathogen archetypes:
 
 -   **"SARS-CoV-2-Like" Archetype** - $R_0$ of 2.5, a mean latent period of 2 days, a mean duration of infectiousness of 4 days.
 
@@ -233,7 +232,11 @@ We also varied our assumption about whether the pathogen was "endemic" or "epide
 
 -   **far UVC Efficacy:** Either 40%, 60% or 80%, with the assumption that far UVC efficacy was identical across all Settings and Locations where it had been installed.
 
-All presented results are based on summary statistics (e.g. mean, range etc) calculated from 25 stochastic replicates. For the endemic pathogen, we used the reduction in annual infection incidence to summarise far UVC impact. Figure \@ref(fig:methods-figure-endemic) shows how this reduction in annual infection incidence was calculated. We ran the model for a period of time without far UVC (referred to in the figure as the "pre-UVC" period), and calculated the average annual incidence of infection over this period. We then introduced far-UVC at a certain point and ran the model for a further 10 years (referred to in the figure as "post-UVC"). We then calculated the average annual incidence of infection across this decade, and the difference in annual incidence of infection between the "pre-UVC" and "post-UVC" periods. For the epidemic pathogen, we considered 3 metrics that together summarise far UVC impact. These are the final epidemic size (i.e. the total number of individuals infected during the epidemic as a percentage of total population size), timing of the epidemic peak, and the size of the peak (i.e. the number of individuals infected when the epidemic is at its largest) as a percentage of the total population size. For each metric, we ran a scenario with and without far UVC installed separately, and then compared each of the metrics in each case. Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario.
+All presented results are based on summary statistics (e.g. mean, range etc) calculated from 25 stochastic replicates for each parameter combination.
+
+For the endemic pathogen, we used the reduction in annual infection incidence to summarise far UVC impact. Figure \@ref(fig:methods-figure-endemic) shows how this reduction in annual infection incidence was calculated. We ran the model for a period of time without far UVC (referred to in the figure as the "pre-UVC" period), and calculated the average annual incidence of infection over this period. We then introduced far-UVC at a certain point and ran the model for a further 10 years (referred to in the figure as "post-UVC"). We then calculated the average annual incidence of infection across this decade, and the difference in annual incidence of infection between the "pre-UVC" and "post-UVC" periods.
+
+For the epidemic pathogen, we considered 3 metrics that together summarise far UVC impact. These are the final epidemic size (the total number of individuals infected during the epidemic as a percentage of total population size), the timing of the epidemic peak, and the size of the peak (the number of individuals infected when the epidemic is at its largest) as a percentage of the total population size. For each metric, we ran separate scenarios with and without far UVC installed, and then compared each of the metrics. Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario.
 
 (ref:methods-figure-endemic) Calculation of the average reduction in annual infection incidence for the endemic pathogen scenarios. Grey colouring indicates pre-UVC period, and orange colouring indicates period following introduction of far UVC. Far UVC is installed at year 5 in this exemplar scenario (indicated by vertical dashed line). Horizontal dashed lines indicate the average incidence of infection in the pre and post UVC periods. Solid arrow indicates the difference in infection incidence between pre-UVC and post-UVC periods. Top panel shows daily incidence, bottom panel shows annual incidence.
 
@@ -345,7 +348,8 @@ ggplot(subset(temp_df3, timestep < 350)) +
 The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in Figure \@ref(fig:epidemic-peak-size), Figure \@ref(fig:epidemic-peak-timing), and Figure \@ref(fig:epidemic-final-size). We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission as a percentage of the total population (hereafter referred to as "peak size", see Figure \@ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure \@ref(fig:epidemic-peak-timing); and the third is the total number of individuals, as a percentage of the total population, infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure \@ref(fig:epidemic-final-size).
 
 #### Epidemic Peak Size
-Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%. 
+
+Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
 
 Assuming 10% coverage and 60% efficacy, random far UVC installation led to an 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)), as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
 
@@ -421,6 +425,7 @@ epidemic_summary_outputs |>
 ```
 
 #### Epidemic Final Size
+
 Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the epidemic final size, as a percentage of the total population by 5.5% (range 5.3%-6.7%) (from 61.2% (58.1-65.4%) to 57.9% (55.0-61.0%)) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) (from 61.2% (58.1-65.4%) to 56.2% (54.6-58.8%)) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) (from 61.2% (58.1-65.4%) to 56.9% (54.5-59.0%)) and 12.6% (range 10.8%-12.7%) (from 61.2% (58.1-65.4%) to 53.5% (50.7-58.3%)) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) (from 89.6% (88.7-90.3%) of the population to 88.5% (87.9-89.2%)) for random coverage and 1.5% (1.1-1.8%) (from 89.6% (88.7-90.3%) to 88.3% (87.7%-88.7%)) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) (from 89.6% (88.7-90.3%) to 87780 (87.3-88.2%)) for random coverage and 2.7% (2.3-2.4%) (from 89.6% (88.7-90.3%) to 87.2% (86.5-88.2%)) for targeted coverage when the efficacy was increased to 80%.
 
 Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (from 58.6% (56.0-60.7%) to 17.3% (10.5-22.9%)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (from 58.1% (56.3-59.9%) to 0.59% (0.240-1.67%)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88.9% (88.3-89.7%) to 68.7% (66.5-70.9%)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88.9% (88.3-89.8%) to 62.9% (61.6%-65.1%)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
