epidemic peak size edits

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -345,15 +345,23 @@ ggplot(subset(temp_df3, timestep < 350)) +
 
 ### Epidemic Pathogen Analyses
 
-The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in Figure \@ref(fig:epidemic-peak-size), Figure \@ref(fig:epidemic-peak-timing), and Figure \@ref(fig:epidemic-final-size). We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission as a percentage of the total population (hereafter referred to as "peak size", see Figure \@ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure \@ref(fig:epidemic-peak-timing); and the third is the total number of individuals, as a percentage of the total population, infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure \@ref(fig:epidemic-final-size).
+The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in Figure \@ref(fig:epidemic-peak-size) (epidemic peak size), Figure \@ref(fig:epidemic-peak-timing) (epidemic peak timing), and Figure \@ref(fig:epidemic-final-size) (epidemic final size).
+
+<!-- We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission as a percentage of the total population (hereafter referred to as "peak size", see Figure @ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure @ref(fig:epidemic-peak-timing); and the third is the total number of individuals, as a percentage of the total population, infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure @ref(fig:epidemic-final-size). -->
 
 #### Epidemic Peak Size
 
 Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
 
-Assuming 10% coverage and 60% efficacy, random far UVC installation led to an 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)), as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
+Assuming 10% coverage and 60% efficacy, and for the "Influenza-Like" archetype, random far UVC installation led to an 11.6% reduction (range 13.7%-18.0%) in the epidemic peak size. This corresponds to a reduction from 6.1% to 5.4% of the population infectious at the epidemic's peak. At 10% coverage and 80% assumed efficacy, the reductions in epidemic peak size was 14.0% (range 13.3%-24.3%). Targeting far UVC to the riskiest 10% of locations instead of randomly produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size when efficacy was 60%, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%
 
-For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5.5% (4.8-6.1%) to 0.65% (0.24-1.1%)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5.2% (4.8-5.7%) to 0.48% (0.44-0.71%)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19.7% (18.8-21.0%) to 9.1 (8.3-10.2%)) for random coverage and by 67.8% (66.5-69.6%) (19.5% (18.7-20.6%) to 6.3 (5.6-6.8%)) for targeted coverage.
+For the "SARS-CoV-2-Like" archetype, assuming 10% random coverage and 60% efficacy, there was a 4.1% reduction (range 1.9%-5.6%) in epidemic peak size, from 20.4% to 19.5% of the population infectious at the epidemic's peak. At 10% coverage and 80% assumed efficacy, the reductions in epidemic peak size was 6.8% (range 4.5%-7.5%). A10% coverage targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) reduction, and 80% efficacy resulted in an 11.1% (range 8.6-10.3%) reduction in epidemic peak size, relative to the no-intervention baseline.
+
+<!-- Assuming 10% coverage and 60% efficacy, random far UVC installation led to an 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)), as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline. -->
+
+For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%). For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) for random coverage and by 67.8% (66.5-69.6%) for targeted coverage.
+
+<!-- For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5.5% (4.8-6.1%) to 0.65% (0.24-1.1%)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5.2% (4.8-5.7%) to 0.48% (0.44-0.71%)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19.7% (18.8-21.0%) to 9.1 (8.3-10.2%)) for random coverage and by 67.8% (66.5-69.6%) (19.5% (18.7-20.6%) to 6.3 (5.6-6.8%)) for targeted coverage. -->
 
 (ref:epidemic-peak-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the maximum total number of recovered individuals in the population averaged across 25 stochastic model simulations, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
